--- a/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
+++ b/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
@@ -177,6 +177,50 @@
             </objects>
             <point key="canvasLocation" x="2465" y="-1153"/>
         </scene>
+        <!--Instructor One View Controller - One View-->
+        <scene sceneID="brq-hY-Ru4">
+            <objects>
+                <viewController id="1ea-sa-x13" customClass="InstructorOneViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M5X-ye-BQf">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="699"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" id="Lye-ZH-ahd">
+                                <rect key="frame" x="510" y="0.0" width="514" height="346"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <webView contentMode="scaleToFill" id="EoR-gh-55r">
+                                <rect key="frame" x="0.0" y="0.0" width="512" height="346"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <webView contentMode="scaleToFill" id="vsv-wf-PGi">
+                                <rect key="frame" x="0.0" y="345" width="512" height="354"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <webView contentMode="scaleToFill" id="uCl-iq-1K0">
+                                <rect key="frame" x="510" y="345" width="514" height="354"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="One View" id="6Kl-FB-QV7"/>
+                    <connections>
+                        <outlet property="BottomLeftWebView" destination="vsv-wf-PGi" id="0T8-cN-A0s"/>
+                        <outlet property="BottomRightWebView" destination="uCl-iq-1K0" id="HC3-Dl-bgR"/>
+                        <outlet property="TopLeftWebView" destination="EoR-gh-55r" id="BmL-7y-Kpb"/>
+                        <outlet property="TopRightWebView" destination="Lye-ZH-ahd" id="78p-sh-Ad8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ybd-EJ-Rw6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2473" y="-231"/>
+        </scene>
         <!--Student Statistics View Controller - Student View Statistics-->
         <scene sceneID="5jF-Il-sXn">
             <objects>
@@ -201,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oII-np-q9E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2457" y="-242"/>
+            <point key="canvasLocation" x="2473" y="794"/>
         </scene>
         <!--Student Options View Controller - Options-->
         <scene sceneID="hIP-x1-NoN">
@@ -260,7 +304,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fzj-sj-5wW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2465" y="1573"/>
+            <point key="canvasLocation" x="2481" y="2609"/>
         </scene>
         <!--Student Seating Chart View Controller - StudentHome-->
         <scene sceneID="1nL-Z8-ivE">
@@ -314,7 +358,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTr-m9-NGc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2465" y="678"/>
+            <point key="canvasLocation" x="2481" y="1714"/>
         </scene>
         <!--Student Tab Bar Controller - StudentInterface-->
         <scene sceneID="LUI-zx-rL0">
@@ -335,7 +379,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HbL-gY-hht" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1199" y="178"/>
+            <point key="canvasLocation" x="1215" y="1214"/>
         </scene>
         <!--Instructor Options View Controller - Instructor Options-->
         <scene sceneID="jGb-9W-IhY">
@@ -487,6 +531,7 @@
                         <segue destination="Don-70-aYr" kind="relationship" relationship="viewControllers" id="zd7-A4-19m"/>
                         <segue destination="hSQ-bb-aEz" kind="relationship" relationship="viewControllers" id="lUB-1T-kIy"/>
                         <segue destination="D7W-4c-9D3" kind="relationship" relationship="viewControllers" id="p1Z-GX-6R8"/>
+                        <segue destination="1ea-sa-x13" kind="relationship" relationship="viewControllers" id="HxU-yi-bJs"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zwy-Y0-Vr7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -511,6 +556,15 @@
                 <relationship kind="outlet" name="RefreshButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="myLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="InstructorOneViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorOneViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="BottomLeftWebView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="BottomRightWebView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="TopLeftWebView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="TopRightWebView" candidateClass="UIWebView"/>
             </relationships>
         </class>
         <class className="InstructorOptionsViewController" superclassName="UIViewController">
